# X-BRIDGE

./: .gitignore  README.md  SWAGGER.md  build_exe.py  commit.py  format.bat  format.py  git_commit_all.py  main.py  migrate.py  pyproject.toml  requirements.txt  startup.bat
.github/workflows/: test-build.yml
Logs/: 2026-02-13__X-BRIDGE.json  2026-02-18__X-BRIDGE.json  2026-03-05__X-BRIDGE.json  2026-05-16_X-BRIDGE.json
alembic/: env.py
alembic/versions/: 24805cf254f8_add_sku_test.py  5886c70609dc_remove_sku.py  cea86ba69fac_initial_migration.py  e93090f190f7_rollback_index.py  ea1cdc332a39_rollback_test.py  f478e171cdee_initial_migration.py  f7ac91c1eb0f_test_index.py
app/async_func/: __init__.py  reader.py  rfid.py
app/core/: __init__.py  build_templates.py  config.py  exeption_handlers.py  fast_alerts.py  indicator.py  logger_manager.py  middleware.py  path.py  settings.py  templates.py  utils.py
app/db/: database.py  session.py
app/models/: __init__.py  helpers.py  rfid.py
app/schemas/: __init__.py  application.py  devices.py  events.py  examples.py  protected.py  responses.py  simulator.py  tag.py
app/services/: __init__.py
app/templates/: base.html  layout.html
config/: actions.json  config.json
config/device_examples/: R700.json  R700_GPI.json  R700_IOT.json  TCP.json  UR4.json
config/devices/: COGNEX.json  CUBA.json  ICARD.json  R700.json  (+17 more)
core/: config.py  fast_alerts.py
docs/: SWAGGER.md
examples/: config.json
license_files/: license.txt  public_key.pem
scripts/: build_exe.py  format.bat  poetry_update.bat  poetry_update.sh
tests/: test_rfid_integration.py  test_version.py
(+187 files in other folders)
