[project]
name = "smartx-connector"
version = "2025.08.30"
description = "Conector RFID SMARTX"
authors = [
    {name = "Gabriel Henrique Pascon",email = "gh.pascon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "=3.11"
dependencies = [
    "fastapi (==0.110.0)",
    "uvicorn (==0.29.0)",
    "jinja2 (==3.1.3)",
    "python-multipart (==0.0.9)",
    "itsdangerous (==2.1.2)",
    "passlib[bcrypt] (==1.7.4)",
    "cryptography (==44.0.3)",
    "sqlalchemy (==2.0.29)",
    "pymysql (==1.1.1)",
    "aiomysql (==0.2.0)",
    "aiosqlite (==0.19.0)",
    "asyncpg (==0.29.0)",
    "aiohttp (==3.11.18)",
    "pandas (==2.2.3)",
    "pyserial-asyncio (==0.6)",
    "pyserial (==3.5)",
    "pyepc (==0.5.0)",
    "pygame (==2.6.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
tomli = "^2.2.1"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pyinstaller = "^6.10.0"


[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.pyi?$'


[tool.flake8]
max-line-length = 100
extend-ignore = [
  "E203",  # compatível com Black (slice spacing)
  "W503",  # compatível com Black (line break before binary operator)
  "E501"
]
per-file-ignores = [
  "__init__.py:F401",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true